fix(deps): update vite to 5.4.21 (esbuild security fix)
- セキュリティ対応: esbuild脆弱性(GHSA-67mh-4wv8-2f99)修正版を含むvite 5.4.21へ更新
- PR整理: 不要な18件のPRをクローズ（設定見直しにより次回Dependabotで再作成）
- Dependabot設定: major version updateを無視（tailwindcss, @sentry/react, vite）
- テスト・ビルド確認済み

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -10,6 +10,14 @@ updates:
       timezone: "Asia/Tokyo"
     # PR数を制限（溜まりすぎ防止）
     open-pull-requests-limit: 5
+    # メジャーバージョン更新を無視（破壊的変更リスク高）
+    ignore:
+      - dependency-name: "tailwindcss"
+        update-types: ["version-update:semver-major"]
+      - dependency-name: "@sentry/react"
+        update-types: ["version-update:semver-major"]
+      - dependency-name: "vite"
+        update-types: ["version-update:semver-major"]
     labels:
       - "dependencies"
       - "auto-merge"
